# fsic

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
fsic/: data.py  feature.py  glo.py  indtest.py  kernel.py  plot.py  util.py
fsic/test/: test_data.py  test_feature.py  test_indtest.py  test_util.py
ipynb/: nfsic_locs_surface.ipynb  nfsic_optimization.ipynb
tests/: test_data.py  test_feature.py  test_indtest.py  test_util.py
tutorial/: demo_nfsic.ipynb  finite_feature_hsic_test.ipynb  nfsic_locs_surface.ipynb  nfsic_optimization.ipynb  nystrom_hsic_test.ipynb  quad_hsic_test.ipynb  rdc_test.ipynb  rdcperm_test.ipynb  test_nfsic_stat.ipynb
