[metadata]
author = Wittawat Jitkrittum
author_email = wittawat@gatsby.ucl.ac.uk
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7
description = The Finite-Set Independence Criterion
license = MIT License
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Nikolaos Korasidis
maintainer_email = nkorasid@student.ethz.ch
name = fsic
url = https://github.com/Renelvon/fsic

[options]
include_package_data = true
install_requires =
    matplotlib>=1.5.2
    numpy>=1.16
    scipy>=0.18
    theano>=0.8.2
packages = fsic
python_requires = >= 3.5
tests_require =
    check-manifest>=0.38
zip_safe = false


