[metadata]
author = Wittawat Jitkrittum
author_email = wittawat@gatsby.ucl.ac.uk
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = The Finite-Set Independence Criterion
keywords = statistics
license = MIT License
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Nikolaos Korasidis
maintainer_email = nkorasid@student.ethz.ch
name = fsic
url = https://github.com/Renelvon/fsic

[options]
include_package_data = true
install_requires =
    numpy>=1.16
    scipy>=0.18
    theano>=0.8.2
packages = fsic
python_requires = >= 3.5
setup_requires =
    setuptools>=38.6.0
    wheel
tests_require =
    black
    check-manifest>=0.38
    pylint
    pyroma>=2.4
zip_safe = true
